add api delete a service
