# api/service.go
@@ -1,10 +1,13 @@
 package api
 
 import (
+	"errors"
+	"fmt"
 	"net/http"
 	
 	"github.com/gin-gonic/gin"
 	db "github.com/katatrina/SWD392/db/sqlc"
+	"github.com/lib/pq"
 )
 
 type createServiceRequest struct {
@@ -153,4 +156,45 @@ func (server *Server) getService(ctx *gin.Context) {
 	}
 	
 	ctx.JSON(http.StatusOK, service)
+}
+
+// deleteService deletes a service
+//
+//	@Router		/services/{id} [delete]
+//	@Summary	Xóa một dịch vụ
+//	@Description
+//	@Param		id	path	int	true	"Service ID"
+//	@Tags		services
+//	@Success	204
+//	@Failure	400
+//	@Failure	403
+//	@Failure	500
+func (server *Server) deleteService(ctx *gin.Context) {
+	serviceID, err := server.getIDParam(ctx)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+	
+	err = server.store.DeleteService(ctx, serviceID)
+	if err != nil {
+		var pqErr *pq.Error
+		if errors.As(err, &pqErr) {
+			switch {
+			case pqErr.Code.Name() == "foreign_key_violation":
+				err = fmt.Errorf("%s", pqErr.Detail)
+				ctx.JSON(http.StatusForbidden, errorResponse(err))
+				return
+			default:
+				err = fmt.Errorf("unexpected error occured: %s", pqErr.Detail)
+				ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+				return
+			}
+		}
+		
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	
+	ctx.JSON(http.StatusNoContent, nil)
 }
